--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Wildly Inaccurate
 description: >
   Guides &amp; opinions about programming and the state of the web.
 
-url: https://wildlyinaccurate.com
+url: https://wildlyinaccurate.github.io
 permalink: /:title
 
 excerpt_separator: <!--more-->
