Tidy up index page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Wildly Inaccurate
 description: >
-  Guides &amp; opinions about programming and the state of the web.
+  A collection of guides &amp; opinions about programming and the state of the web, from a developer at BBC News.
 
 url: https://wildlyinaccurate.github.io
 permalink: /:title
