--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "Joseph Wynn <joseph@wildlyinaccurate.com>"
   ],
   "dependencies": {
-    "bootstrap-sass-official": "3.3.1"
+    "bootstrap-sass-official": "3.3.1",
+    "pygments": "2.0.1"
   }
 }
