Add Disqus. Closes #7.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Wildly Inaccurate
 description: >
   A collection of guides &amp; opinions about programming and the state of the web, from a developer at BBC News.
 
-url: https://wildlyinaccurate.github.io
+url: https://wildlyinaccurate.com
 permalink: /:title
 
 excerpt_separator: <!--more-->
