--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-uncss": "^0.3.8"
+    "grunt-filerev": "^2.1.2",
+    "grunt-uncss": "^0.3.8",
+    "grunt-usemin": "^3.0.0"
   },
   "repository": {
     "type": "git",
