--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-filerev": "^2.1.2",
     "grunt-uncss": "^0.3.8",
     "grunt-usemin": "^3.0.0"
