--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,8 @@
     "Joseph Wynn <joseph@wildlyinaccurate.com>"
   ],
   "dependencies": {
-    "bootstrap-sass-official": "3.3.1",
-    "pygments": "2.0.1",
-    "hogan": "~3.0.2"
+    "bootstrap-sass-official": "3.3.5",
+    "pygments": "2.0.2",
+    "hogan": "3.0.2"
   }
 }
