--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-filerev": "^2.1.2",
-    "grunt-uncss": "^0.3.8",
-    "grunt-usemin": "^3.0.0"
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-filerev": "^2.3.1",
+    "grunt-uncss": "^0.4.3",
+    "grunt-usemin": "^3.1.1"
   },
   "repository": {
     "type": "git",
