--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-elm": "^1.3.0",
     "grunt-filerev": "^2.3.1",
     "grunt-uncss": "^0.4.3",
     "grunt-usemin": "^3.1.1"
