--- a/_config.yml
+++ b/_config.yml
@@ -48,22 +48,22 @@ responsive_image:
     - width: 1840
 
 markdown: kramdown
+highlighter: rouge
 kramdown:
-    toc_levels: 1..3
-    input: GFM
-    syntax_highlighter: rouge
+  toc_levels: 1..3
+  input: GFM
 
 include:
-    - search.json
+  - search.json
 
 exclude:
-    - README.md
-    - bower_components
-    - bower.js
-    - Gemfile
-    - Gemfile.lock
-    - Gruntfile.js
-    - node_modules
-    - package.json
-    - elm
-    - elm-stuff
+  - README.md
+  - bower_components
+  - bower.js
+  - Gemfile
+  - Gemfile.lock
+  - Gruntfile.js
+  - node_modules
+  - package.json
+  - elm
+  - elm-stuff
