--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "wildlyinaccurate.com",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "build": "grunt build"
+  },
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.7.9",
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-elm": "^1.3.0",
     "grunt-filerev": "^2.3.1",
-    "grunt-uncss": "^0.4.3",
+    "grunt-uncss": "^0.4.4",
     "grunt-usemin": "^3.1.1"
   },
   "repository": {
