--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-elm": "^1.3.0",
     "grunt-filerev": "^2.3.1",
