--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "npm run webpack && grunt build",
-    "webpack": "npm run webpack-search",
+    "build": "grunt elm && npm run webpack && grunt build",
+
+    "elm": "grunt elm && cp js/compiled/Collection.js _site/js/compiled/Collection.js",
+
+    "webpack": "npm run webpack-search && npm run webpack-collection",
     "webpack-search": "webpack -p js/search.js js/compiled/search.js",
+    "webpack-collection": "webpack -p js/collection-bootstrap.js js/compiled/collection-bootstrap.js",
+
     "spellcheck": "mdspell --ignore-numbers --ignore-acronyms --no-suggestions _posts/**/*.md"
   },
   "dependencies": {
