--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ excerpt_separator: <!--more-->
 paginate: 15
 
 email: joseph@wildlyinaccurate.com
-twitter_username: Joseph_Wynn
+twitter_username: joseph_wynn
 github_username:  wildlyinaccurate
 
 gems:
@@ -21,25 +21,30 @@ gems:
   - jekyll-last-modified-at
 
 responsive_image:
-  default_quality: 85
+  default_quality: 75
   template: _includes/thumbnail.html
   sizes:
     # 320px devices
     - width: 320
-      quality: 75
+      quality: 65
+      progressive: true
 
     # 360px devices
     - width: 360
-      quality: 75
+      quality: 65
+      progressive: true
 
     # Container width on S devices
     - width: 720
+      progressive: true
 
     # Container width on M devices
     - width: 940
+      progressive: true
 
     # Container width on L devices
     - width: 1140
+      progressive: true
 
     # Common device widths (minus ~80px allowance for UI) for full-width images
     - width: 1280
