--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,9 @@ responsive_image:
     - width: 1110
       progressive: true
 
+  extra_images:
+    - assets/brachiosaurus.png
+
 markdown: kramdown
 highlighter: rouge
 kramdown:
