--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "bootstrap": "github:twbs/bootstrap#v4-dev",
-    "hogan.js": "^3.0.2",
-    "pygments": "^0.2.1"
+    "hogan.js": "^3.0.2"
   },
   "devDependencies": {
     "babili": "0.0.12",
@@ -28,10 +27,11 @@
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-elm": "^2.0.0",
     "grunt-filerev": "^2.3.1",
-    "grunt-uncss": "^0.6.1",
+    "grunt-uncss": "^0.6.2",
     "grunt-usemin": "^3.1.1",
     "markdown-spellcheck": "^0.11.0",
-    "webpack": "^2.6.1"
+    "pygments-rouge-css": "^0.1.0",
+    "webpack": "^3.4.1"
   },
   "repository": {
     "type": "git",
