--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.4.0",
-    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-imagemin": "^2.0.1",
     "grunt-elm": "^2.0.0",
     "grunt-filerev": "^2.3.1",
     "grunt-uncss": "^0.6.2",
     "grunt-usemin": "^3.1.1",
-    "markdown-spellcheck": "^0.11.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "^5.0.1",
+    "markdown-spellcheck": "^1.0.0",
     "pygments-rouge-css": "^0.1.0",
     "webpack": "^3.4.1"
   },
