--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Wildly Inaccurate
 description: >
-  A collection of guides &amp; opinions about programming and the state of the web, from a developer at BBC News.
+  A collection of guides &amp; opinions about programming and the state of the web.
 
 url: https://wildlyinaccurate.com
 permalink: /:title/
