--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "grunt elm && npm run webpack && npm run babili && grunt build",
-    "elm": "grunt elm && cp js/compiled/Collection.js _site/js/compiled/Collection.js",
+    "build": "npm run elm && npm run webpack && npm run babili && grunt build",
+    "elm": "elm make elm/Main.elm --optimize --output=js/compiled/Collection.js",
+    "elm-dev": "npm run elm && npm run webpack-collection && cp js/compiled/collection-bootstrap.js _site/js/compiled/collection-bootstrap.js",
     "babili": "babili service-worker.js -o _site/service-worker.js",
     "webpack": "npm run webpack-search && npm run webpack-collection",
-    "webpack-search": "webpack -p js/search.js js/compiled/search.js",
-    "webpack-collection": "webpack -p js/collection-bootstrap.js js/compiled/collection-bootstrap.js",
+    "webpack-search": "webpack -p js/search.js --output js/compiled/search.js",
+    "webpack-collection": "webpack -p js/collection-bootstrap.js --output js/compiled/collection-bootstrap.js",
     "spellcheck": "mdspell --ignore-numbers --ignore-acronyms --no-suggestions _posts/**/*.md",
     "imagemin": "grunt imagemin"
   },
@@ -19,20 +20,21 @@
   "devDependencies": {
     "babili": "0.0.12",
     "cheerio": "^0.22.0",
+    "elm": "^0.19.0",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.1",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-elm": "^2.0.0",
     "grunt-filerev": "^2.3.1",
     "grunt-uncss": "^0.6.2",
     "grunt-usemin": "^3.1.1",
     "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.1.0",
+    "imagemin-pngquant": "^6.0.0",
     "markdown-spellcheck": "^1.3.1",
     "pygments-rouge-css": "^0.1.0",
-    "webpack": "^3.12.0"
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0"
   },
   "repository": {
     "type": "git",
